welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:16: error: not found: value danse
		case "" => danse=false
                           ^